wxWindows 2 Change Log
----------------------

INCOMPATIBLE CHANGES SINCE 2.2.x
================================

wxMSW:

- child frames appear in the taskbar by default now, use wxFRAME_NO_TASKBAR
  style to avoid it

2.3.2
-----

wxBase:

- wxRegEx class added
- wxGetDiskSpace() function added (Jonothan Farr, Markus Fieber)
- more fixes to wxMBConv classes. Conversion to and from wchar_t now works with
  glibc 2.2 as well as with glibc 2.1. Unix version now checks for iconv()'s
  capabilities at runtime instead of in the configure script.

All (GUI):

- support for virtual list control added
- column images in report mode of the list control
- wxFindReplaceDialog added (based on work of Markus Greither)
- wxTextCtrl::SetMaxLength() added (wxMSW/wxGTK)
- polygon support in wxRegion (Klaas Holwerda)
- fixed bug with using wxExecute() to capture huge amounts of output

wxHTML:

- new HTML parser with correct parsing of character entities and fixes
  to tags parsing
- added support for animated GIFs

2.3.1
-----

wxBase:

- Fixes for gcc 3.0
- Fixed new charset detection code
- ODBC Informix fixes (submitted by Roger Gammans)
- Added ODBC date support to wxVariant
- Added wxDir::Traverse
- Added wxSingleInstanceChecker class
- Removed redundant wxDebugContext functions using C++ streams,
  so now standard stream usage should be unnecessary

All (GUI):

- Added wxDbGrid class for displaying ODBC tables
- Added EVT_GRID_EDITOR_CREATED and wxGridEditorCreatedEvent so the
  user code can get access to the edit control when it is created, (to
  push on a custom event handler for example)
- Added wxTextAttr class and SetStyle, SetDefaultStyle and
  GetDefaultStyle methods to wxTextCtrl
- Added wxSingleInstanceChecker
- Improvements to Tex2RTF
- Added Paul and Roger Gammans' grid controls
- Bug in wxDocument::Save logic corrected, whereby Save didn't save when not
  first-time saved
- Fixed memory leak in textcmn.cpp
- Various wxXML enhancements